--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  gap: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 350px;
+  width: 70%;
+  border: 1px solid #0013BF;
+  border-radius: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box .divHolder {
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  /* padding: 20px; */
+  gap: 15px;
+}
+.Result{
+  width: 100%;
+  height: 25px;
+  border: 1px solid #0013BF;
+  padding-left: 5px;
+  color: #0013BF;
+}
+input {
+  height: 25px;
+}
+button {
+  background-color: #215EFC;
+  width: 160px;
+  height: 50px;
+  border-radius: 10px;
+  color: #fff;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+.btnHolder {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 20px;
+}
+.res {
+  color: #0013BF;
 }
